# seed-rs-game-of-life

./: .gitignore  Cargo.toml  README.md  index.html
src/: lib.rs
src/game_of_life/: game_of_life.rs
src/page/: game_of_life.rs
