[package]
version = "0.1.0"
name = "seed-rs-page"
repository = ""
authors = ["Fish <patrick@thepatrickfisher.com>"]
description = "WebApp Homepage"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
rand = "0.8.4"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
